plugins/binding/capi/include/TellusimCMath.h

typedef struct TSVector2f {
	union {
		struct {
			float32_t x, y;
		};
		float32_t v[2];
	};
} TSVector2f;
typedef struct TSVector2d {
	union {
		struct {
			float64_t x, y;
		};
		float64_t v[2];
	};
} TSVector2d;
TS_CAPI TSVector4d* TS_CCALL tsVector4d_abs(TSVector4d *ret, const TSVector4d *v);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_neg(TSVector4d *ret, const TSVector4d *v);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_mul1(TSVector4d *ret, const TSVector4d *v0, float64_t v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_div1(TSVector4d *ret, const TSVector4d *v0, float64_t v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_add1(TSVector4d *ret, const TSVector4d *v0, float64_t v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_sub1(TSVector4d *ret, const TSVector4d *v0, float64_t v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_mul(TSVector4d *ret, const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_div(TSVector4d *ret, const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_add(TSVector4d *ret, const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_sub(TSVector4d *ret, const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_min(TSVector4d *ret, const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_max(TSVector4d *ret, const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_clamp(TSVector4d *ret, const TSVector4d *v, const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_saturate(TSVector4d *ret, const TSVector4d *v);
TS_CAPI float64_t TS_CCALL tsVector4d_dot(const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI float64_t TS_CCALL tsVector4d_dot33(const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI float64_t TS_CCALL tsVector4d_dot43(const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI float64_t TS_CCALL tsVector4d_dot34(const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_cross(TSVector4d *ret, const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI float64_t TS_CCALL tsVector4d_length(const TSVector4d *v);
TS_CAPI float64_t TS_CCALL tsVector4d_length3(const TSVector4d *v);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_normalize(TSVector4d *ret, const TSVector4d *v);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_normalize3(TSVector4d *ret, const TSVector4d *v);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_lerp(TSVector4d *ret, const TSVector4d *v0, const TSVector4d *v1, float64_t k);
/*****************************************************************************\
 *
 * Matrix3x2
 *
\*****************************************************************************/

/*
 */
typedef struct TSMatrix3x2f {
	union {
		struct {
			float32_t m00, m01, m02;
			float32_t m10, m11, m12;
		};
		struct {
			TSVector3f row_0;
			TSVector3f row_1;
		};
		TSVector3f rows[2];
		float32_t m[6];
	};
} TSMatrix3x2f;
typedef struct TSMatrix3x2d {
	union {
		struct {
			float64_t m00, m01, m02;
			float64_t m10, m11, m12;
		};
		struct {
			TSVector3d row_0;
			TSVector3d row_1;
		};
		TSVector3d rows[2];
		float64_t m[6];
	};
} TSMatrix3x2d;
/*
 */
TS_CAPI void TS_CCALL tsMatrix3x2f_set(TSMatrix3x2f *m, const float32_t *src, uint32_t size, bool_t row_major);
TS_CAPI void TS_CCALL tsMatrix3x2d_set(TSMatrix3x2d *m, const float64_t *src, uint32_t size, bool_t row_major);
TS_CAPI void TS_CCALL tsMatrix3x2f_get(const TSMatrix3x2f *m, float32_t *dest, uint32_t size, bool_t row_major);
TS_CAPI void TS_CCALL tsMatrix3x2d_get(const TSMatrix3x2d *m, float64_t *dest, uint32_t size, bool_t row_major);
TS_CAPI TSMatrix3x2f* TS_CCALL tsMatrix3x2f_scale(TSMatrix3x2f *ret, float32_t x, float32_t y);
TS_CAPI TSMatrix3x2d* TS_CCALL tsMatrix3x2d_scale(TSMatrix3x2d *ret, float64_t x, float64_t y);
TS_CAPI TSMatrix3x2f* TS_CCALL tsMatrix3x2f_translate(TSMatrix3x2f *ret, float32_t x, float32_t y);
TS_CAPI TSMatrix3x2d* TS_CCALL tsMatrix3x2d_translate(TSMatrix3x2d *ret, float64_t x, float64_t y);
TS_CAPI TSMatrix3x2f* TS_CCALL tsMatrix3x2f_rotate(TSMatrix3x2f *ret, float32_t angle);
TS_CAPI TSMatrix3x2d* TS_CCALL tsMatrix3x2d_rotate(TSMatrix3x2d *ret, float64_t angle);
TS_CAPI TSVector2f* TS_CCALL tsMatrix3x2f_mul2(TSVector2f *ret, const TSMatrix3x2f *m, const TSVector2f *v);
TS_CAPI TSVector2d* TS_CCALL tsMatrix3x2d_mul2(TSVector2d *ret, const TSMatrix3x2d *m, const TSVector2d *v);
TS_CAPI TSVector2f* TS_CCALL tsMatrix3x2f_mul2t(TSVector2f *ret, const TSVector2f *v, const TSMatrix3x2f *m);
TS_CAPI TSVector2d* TS_CCALL tsMatrix3x2d_mul2t(TSVector2d *ret, const TSVector2d *v, const TSMatrix3x2d *m);
TS_CAPI TSMatrix3x2f* TS_CCALL tsMatrix3x2f_mul(TSMatrix3x2f *ret, const TSMatrix3x2f *m0, const TSMatrix3x2f *m1);
TS_CAPI TSMatrix3x2d* TS_CCALL tsMatrix3x2d_mul(TSMatrix3x2d *ret, const TSMatrix3x2d *m0, const TSMatrix3x2d *m1);
TS_CAPI TSMatrix3x2f* TS_CCALL tsMatrix3x2f_transpose(TSMatrix3x2f *ret, const TSMatrix3x2f *m);
TS_CAPI TSMatrix3x2f* TS_CCALL tsMatrix3x2f_inverse(TSMatrix3x2f *ret, const TSMatrix3x2f *m);