plugins/binding/swift/include/TellusimObjCMath.h

typedef TSVector2f Vector2f;
typedef TSVector2d Vector2d;
typedef struct TSVector3f {
	union {
		struct {
			float32_t x, y, z;
		};
		struct {
			TSVector2f xy;
			float32_t xy_z;
		};
		float32_t v[3];
	};
} TSVector3f;
typedef struct TSVector3d {
	union {
		struct {
			float64_t x, y, z;
		};
		struct {
			TSVector2d xy;
			float64_t xy_z;
		};
		float64_t v[3];
	};
} TSVector3d;
typedef TSVector3f Vector3f;
typedef TSVector3d Vector3d;
typedef TSVector4d Vector4d;
/*
 */
typedef TSMatrix3x2f Matrix3x2f;
typedef TSMatrix3x2d Matrix3x2d;