plugins/binding/csharp/source/TellusimCSMath.cs

		
		public static Vector4d operator*(in Vector4d v0, in Vector4d v1) { Vector4d ret = new Vector4d(); tsVector4d_mul(ref ret, in v0, in v1); return ret; }
		public static Vector4d operator/(in Vector4d v0, in Vector4d v1) { Vector4d ret = new Vector4d(); tsVector4d_div(ref ret, in v0, in v1); return ret; }
		public static Vector4d operator+(in Vector4d v0, in Vector4d v1) { Vector4d ret = new Vector4d(); tsVector4d_add(ref ret, in v0, in v1); return ret; }
		public static Vector4d operator-(in Vector4d v0, in Vector4d v1) { Vector4d ret = new Vector4d(); tsVector4d_sub(ref ret, in v0, in v1); return ret; }
		
		public Vector4d abs() { Vector4d ret = new Vector4d(); tsVector4d_abs(ref ret, in this); return ret; }
		
		public static Vector4d min(in Vector4d v0, in Vector4d v1) { Vector4d ret = new Vector4d(); tsVector4d_min(ref ret, in v0, in v1); return ret; }
		public static Vector4d max(in Vector4d v0, in Vector4d v1) { Vector4d ret = new Vector4d(); tsVector4d_max(ref ret, in v0, in v1); return ret; }
		
		public Vector4d clamp(in Vector4d v0, in Vector4d v1) { Vector4d ret = new Vector4d(); tsVector4d_clamp(ref ret, in this, in v0, in v1); return ret; }
		public Vector4d saturate() { Vector4d ret = new Vector4d(); tsVector4d_saturate(ref ret, in this); return ret; }
		
		public static double dot(in Vector4d v0, in Vector4d v1) { return tsVector4d_dot(in v0, in v1); }
		public static double dot33(in Vector4d v0, in Vector4d v1) { return tsVector4d_dot33(in v0, in v1); }
		public static double dot43(in Vector4d v0, in Vector4d v1) { return tsVector4d_dot43(in v0, in v1); }
		public static double dot34(in Vector4d v0, in Vector4d v1) { return tsVector4d_dot34(in v0, in v1); }
		public static Vector4d cross(in Vector4d v0, in Vector4d v1) { Vector4d ret = new Vector4d(); tsVector4d_cross(ref ret, in v0, in v1); return ret; }
		
		public double length() { return tsVector4d_length(in this); }
		public double length3() { return tsVector4d_length3(in this); }
		public Vector4d normalize() { Vector4d ret = new Vector4d(); tsVector4d_normalize(ref ret, in this); return ret; }
		public Vector4d normalize3() { Vector4d ret = new Vector4d(); tsVector4d_normalize3(ref ret, in this); return ret; }
		
		public static Vector4d lerp(in Vector4d v0, in Vector4d v1, double k) { Vector4d ret = new Vector4d(); tsVector4d_lerp(ref ret, in v0, in v1, k); return ret; }
		
		public override string ToString() { return System.String.Format("({0} {1} {2} {3})", x, y, z, w); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsVector4d_abs(ref Vector4d ret, in Vector4d v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4d_neg(ref Vector4d ret, in Vector4d v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4d_mul1(ref Vector4d ret, in Vector4d v0, double v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4d_div1(ref Vector4d ret, in Vector4d v0, double v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4d_add1(ref Vector4d ret, in Vector4d v0, double v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4d_sub1(ref Vector4d ret, in Vector4d v0, double v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4d_mul(ref Vector4d ret, in Vector4d v0, in Vector4d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4d_div(ref Vector4d ret, in Vector4d v0, in Vector4d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4d_add(ref Vector4d ret, in Vector4d v0, in Vector4d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4d_sub(ref Vector4d ret, in Vector4d v0, in Vector4d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4d_min(ref Vector4d ret, in Vector4d v0, in Vector4d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4d_max(ref Vector4d ret, in Vector4d v0, in Vector4d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4d_clamp(ref Vector4d ret, in Vector4d v, in Vector4d v0, in Vector4d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4d_saturate(ref Vector4d ret, in Vector4d v);
		[DllImport(Base.Import)] private static extern double tsVector4d_dot(in Vector4d v0, in Vector4d v1);
		[DllImport(Base.Import)] private static extern double tsVector4d_dot33(in Vector4d v0, in Vector4d v1);
		[DllImport(Base.Import)] private static extern double tsVector4d_dot43(in Vector4d v0, in Vector4d v1);
		[DllImport(Base.Import)] private static extern double tsVector4d_dot34(in Vector4d v0, in Vector4d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4d_cross(ref Vector4d ret, in Vector4d v0, in Vector4d v1);
		[DllImport(Base.Import)] private static extern double tsVector4d_length(in Vector4d v);
		[DllImport(Base.Import)] private static extern double tsVector4d_length3(in Vector4d v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4d_normalize(ref Vector4d ret, in Vector4d v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4d_normalize3(ref Vector4d ret, in Vector4d v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4d_lerp(ref Vector4d ret, in Vector4d v0, in Vector4d v1, double k);
		
		public static readonly Vector4d zero = new Vector4d(0.0);
		public static readonly Vector4d oneX = new Vector4d(1.0, 0.0, 0.0, 0.0);
		public static readonly Vector4d oneY = new Vector4d(0.0, 1.0, 0.0, 0.0);
		public static readonly Vector4d oneZ = new Vector4d(0.0, 0.0, 1.0, 0.0);
		public static readonly Vector4d oneW = new Vector4d(0.0, 0.0, 0.0, 1.0);
		public static readonly Vector4d one = new Vector4d(1.0);
		
		public double x, y, z, w;
	}
	
	/*****************************************************************************\
	 *
	 * Matrix3x2
	 *
	\*****************************************************************************/
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct Matrix3x2f {
		
		public Matrix3x2f(in Matrix3x2f m) { row_0 = m.row_0; row_1 = m.row_1; }
		public Matrix3x2f(in Matrix3x2d m) { row_0 = new Vector3f(m.row_0); row_1 = new Vector3f(m.row_1); }
		public Matrix3x2f(in Vector3f row_0, in Vector3f row_1) { this.row_0 = row_0; this.row_1 = row_1; }
		public Matrix3x2f(in float[] src, bool row_major = true) { Matrix3x2f ret = new Matrix3x2f(); ret.set(src, row_major); row_0 = ret.row_0; row_1 = ret.row_1; }
		
		public void set(in float[] src, bool row_major = true) { tsMatrix3x2f_set(ref this, in src, (uint)src.Length, row_major); }
		public void get(ref float[] dest, bool row_major = true) { tsMatrix3x2f_get(in this, ref dest, (uint)dest.Length, row_major); }
		
		public static Matrix3x2f scale(float s) { Matrix3x2f ret = new Matrix3x2f(); tsMatrix3x2f_scale(ref ret, s, s); return ret; }
		public static Matrix3x2f scale(float x, float y) { Matrix3x2f ret = new Matrix3x2f(); tsMatrix3x2f_scale(ref ret, x, y); return ret; }
		public static Matrix3x2f scale(in Vector2f s) { Matrix3x2f ret = new Matrix3x2f(); tsMatrix3x2f_scale(ref ret, s.x, s.y); return ret; }
		public static Matrix3x2f translate(float x, float y) { Matrix3x2f ret = new Matrix3x2f(); tsMatrix3x2f_translate(ref ret, x, y); return ret; }
		public static Matrix3x2f translate(in Vector2f t) { Matrix3x2f ret = new Matrix3x2f(); tsMatrix3x2f_translate(ref ret, t.x, t.y); return ret; }
		public static Matrix3x2f rotate(float angle) { Matrix3x2f ret = new Matrix3x2f(); tsMatrix3x2f_rotate(ref ret, angle); return ret; }
		
		public static Vector2f operator*(in Matrix3x2f m, in Vector2f v) { Vector2f ret = new Vector2f(); tsMatrix3x2f_mul2(ref ret, in m, in v); return ret; }
		public static Vector2f operator*(in Vector2f v, in Matrix3x2f m) { Vector2f ret = new Vector2f(); tsMatrix3x2f_mul2t(ref ret, in v, in m); return ret; }
		public static Matrix3x2f operator*(in Matrix3x2f m0, in Matrix3x2f m1) { Matrix3x2f ret = new Matrix3x2f(); tsMatrix3x2f_mul(ref ret, in m0, in m1); return ret; }
		
		public Matrix3x2f transpose() { Matrix3x2f ret = new Matrix3x2f(); tsMatrix3x2f_transpose(ref ret, in this); return ret; }
		public Matrix3x2f inverse() { Matrix3x2f ret = new Matrix3x2f(); tsMatrix3x2f_inverse(ref ret, in this); return ret; }
		
		public override string ToString() { return System.String.Format("{0} : {1}", row_0, row_1); }
		
		[DllImport(Base.Import)] private static extern void tsMatrix3x2f_set(ref Matrix3x2f m, in float[] src, uint size, bool row_major);
		[DllImport(Base.Import)] private static extern void tsMatrix3x2f_get(in Matrix3x2f m, ref float[] dest, uint size, bool row_major);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix3x2f_scale(ref Matrix3x2f ret, float x, float y);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix3x2f_translate(ref Matrix3x2f ret, float x, float y);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix3x2f_rotate(ref Matrix3x2f ret, float angle);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix3x2f_mul2(ref Vector2f ret, in Matrix3x2f m, in Vector2f v);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix3x2f_mul2t(ref Vector2f ret, in Vector2f v, in Matrix3x2f m);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix3x2f_mul(ref Matrix3x2f ret, in Matrix3x2f m0, in Matrix3x2f m1);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix3x2f_transpose(ref Matrix3x2f ret, in Matrix3x2f m);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix3x2f_inverse(ref Matrix3x2f ret, in Matrix3x2f m);
		
		public static readonly Matrix3x2f zero = new Matrix3x2f(Vector3f.zero, Vector3f.zero);
		public static readonly Matrix3x2f identity = new Matrix3x2f(new Vector3f(1.0f, 0.0f, 0.0f), new Vector3f(0.0f, 1.0f, 0.0f));
		
		public Vector3f row_0;
		public Vector3f row_1;
	}
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct Matrix3x2d {
		
		public Matrix3x2d(in Matrix3x2d m) { row_0 = m.row_0; row_1 = m.row_1; }
		public Matrix3x2d(in Matrix3x2f m) { row_0 = new Vector3d(m.row_0); row_1 = new Vector3d(m.row_1); }
		public Matrix3x2d(in Vector3d row_0, in Vector3d row_1) { this.row_0 = row_0; this.row_1 = row_1; }
		public Matrix3x2d(in double[] src, bool row_major = true) { Matrix3x2d ret = new Matrix3x2d(); ret.set(src, row_major); row_0 = ret.row_0; row_1 = ret.row_1; }
		
		public void set(in double[] src, bool row_major = true) { tsMatrix3x2d_set(ref this, in src, (uint)src.Length, row_major); }
		public void get(ref double[] dest, bool row_major = true) { tsMatrix3x2d_get(in this, ref dest, (uint)dest.Length, row_major); }
		
		public static Matrix3x2d scale(double s) { Matrix3x2d ret = new Matrix3x2d(); tsMatrix3x2d_scale(ref ret, s, s); return ret; }
		public static Matrix3x2d scale(double x, double y) { Matrix3x2d ret = new Matrix3x2d(); tsMatrix3x2d_scale(ref ret, x, y); return ret; }
		public static Matrix3x2d scale(in Vector2d s) { Matrix3x2d ret = new Matrix3x2d(); tsMatrix3x2d_scale(ref ret, s.x, s.y); return ret; }
		public static Matrix3x2d translate(double x, double y) { Matrix3x2d ret = new Matrix3x2d(); tsMatrix3x2d_translate(ref ret, x, y); return ret; }
		public static Matrix3x2d translate(in Vector2d t) { Matrix3x2d ret = new Matrix3x2d(); tsMatrix3x2d_translate(ref ret, t.x, t.y); return ret; }
		public static Matrix3x2d rotate(double angle) { Matrix3x2d ret = new Matrix3x2d(); tsMatrix3x2d_rotate(ref ret, angle); return ret; }
		
		public static Vector2d operator*(in Matrix3x2d m, in Vector2d v) { Vector2d ret = new Vector2d(); tsMatrix3x2d_mul2(ref ret, in m, in v); return ret; }
		public static Vector2d operator*(in Vector2d v, in Matrix3x2d m) { Vector2d ret = new Vector2d(); tsMatrix3x2d_mul2t(ref ret, in v, in m); return ret; }
		public static Matrix3x2d operator*(in Matrix3x2d m0, in Matrix3x2d m1) { Matrix3x2d ret = new Matrix3x2d(); tsMatrix3x2d_mul(ref ret, in m0, in m1); return ret; }
